@@ -1,4 +1,6 @@
 Sigil v0.1.2 <ADD DATE>
+    - Sigil can now accept a file to load as the first command line argument; this also
+    provides support for "Open With..." operating system features (issue #63)
     - fixed an issue where the reported build time in the About dialog was actually the execution time (issue #65)
     - loading of missing files in the recent files list is now improved (issue #57)
     - fixed a rare issue where the wrong view could be sent to the printer on print actions
